--- a/.gitignore
+++ b/.gitignore
@@ -58,12 +58,9 @@ venv.bak/
 # PyPI configuration file
 .pypirc
 
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+# Claude
+CLAUDE.md
+
 
 # Aider
 .aider*
