--- a/_quarto.yml
+++ b/_quarto.yml
@@ -65,8 +65,7 @@ page-footer:
 format:
   html:
     theme:
-      # light: [yeti, styles/theme-slate.scss]
-      light: [simplex, styles/theme-slate.scss]
+      light: [simplex, styles/custom.scss]
     toc: true
     link-external-icon: true
     link-external-newwindow: true
