--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,7 @@ prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==20.0.0
 pycparser==2.22
 pydantic==2.11.5
 pydantic_core==2.33.2
