--- a/_brand.yml
+++ b/_brand.yml
@@ -1,19 +1,202 @@
-color:
-  palette:
-    black: "#000000"
-    white: "#FFFFFF"
-    red: "#E53E3E"
-    light-grey: "#FAFAFA"
-  background: white
-  foreground: black
-  primary: red
+meta:
+  name: Virtuelle Akademie
+  short_name: VA
+  # url: https://virtuelleakademie.github.io/
+  # email: virtuelle.akademie@bfh.ch
 
-# logo: 
-#   large: assets/bfh-logo.png
+color:
+  # Bauhaus-inspired minimal color scheme
+  palette:
+    black: "#000000"      # Primary text
+    white: "#FFFFFF"      # Background
+    red: "#E53E3E"        # Primary brand color / accent
+    red-dark: "#C53030"   # Hover state for red
+    gray: "#666666"       # Secondary text
+    gray-light: "#F7F7F7" # Secondary background
+    gray-lighter: "#FAFAFA" # Light background
+    gray-border: "#E0E0E0"  # Light borders
+
+  theme:
+    primary: "#E53E3E"
+    secondary: "#000000"
+    tertiary: "#666666"
+    success: "#E53E3E"
+    info: "#E53E3E"
+    warning: "#E53E3E"
+    danger: "#C53030"
+    light: "#FAFAFA"
+    dark: "#000000"
+
+  background:
+    primary: "#FFFFFF"
+    secondary: "#F7F7F7"
+    tertiary: "#FAFAFA"
+
+  foreground:
+    primary: "#000000"
+    secondary: "#666666"
+    muted: "#999999"
+
+logo:
+  favicon:
+    light: "/assets/va-logo.png"
+    dark: "/assets/va-logo.png"
+  # Other logo variations could be specified here
+  # navbar: "/assets/logo.png"
+  # square: "/assets/logo-square.png"
 
 typography:
   fonts:
-    - family: Inter
+    - family: "Inter"
       source: google
-  base: Inter
-  headings: Inter
+      weights: [100, 200, 300, 400, 500, 600, 700, 800, 900]
+      display: swap
+      fallback: "-apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif"
+
+    - family: "JetBrains Mono"
+      source: google
+      weights: [100, 200, 300, 400, 500, 600, 700, 800]
+      display: swap
+      fallback: "Consolas, 'Courier New', monospace"
+
+  base:
+    family: "Inter"
+    size: "1rem"
+    line-height: 1.5
+    weight: 400
+
+  headings:
+    family: "Inter"
+    weight: 700
+    line-height: 0.9
+    letter-spacing: "-0.02em"
+    style: "normal"
+    color: "#000000"
+    text-transform: "uppercase"
+
+  monospace:
+    family: "JetBrains Mono"
+    size: "0.875em"
+
+  links:
+    color: "#E53E3E"
+    text-decoration: "none"
+    weight: 500
+    hover-color: "#C53030"
+    hover-decoration: "underline"
+
+  # Additional semantic text styles
+  emphasis:
+    weight: 600
+    style: "italic"
+
+  strong:
+    weight: 700
+
+  small:
+    size: "0.875rem"
+
+  nav:
+    text-transform: "uppercase"
+    letter-spacing: "0.1em"
+    font-size: "0.85rem"
+    weight: 600
+
+id:
+  prefix: "va-"
+
+images:
+  defaults:
+    # Default image styling parameters
+    border-radius: 0
+    shadow: false
+
+layouts:
+  spacing:
+    base: "1rem"
+    xs: "0.5rem"
+    sm: "0.75rem"
+    md: "1rem"
+    lg: "2rem"
+    xl: "3rem"
+    xxl: "4rem"
+
+  widths:
+    content: "1200px"
+    sidebar: "300px"
+    narrow: "800px"
+    wide: "1400px"
+
+  radius:
+    none: "0"
+    sm: "0"     # Override all rounded corners to 0
+    md: "0"
+    lg: "0"
+    xl: "0"
+
+  borders:
+    width: "2px"
+    style: "solid"
+    color: "#000000"
+
+shiny:
+  theme:
+    name: custom
+    preset: bootstrap
+    bg: "#FFFFFF"
+    fg: "#000000"
+    primary: "#E53E3E"
+    secondary: "#F7F7F7"
+    success: "#E53E3E"
+    info: "#E53E3E"
+    warning: "#E53E3E"
+    danger: "#C53030"
+    base_font:
+      google: "Inter"
+    heading_font:
+      google: "Inter"
+    code_font:
+      google: "JetBrains Mono"
+
+defaults:
+  # Default theming for various contexts
+  plots:
+    foreground: "#000000"
+    background: "#FFFFFF"
+    grid: "#E0E0E0"
+    text: "#000000"
+
+  tables:
+    striped: false
+    bordered: true
+    hover: true
+    border-color: "#000000"
+    header-background: "#000000"
+    header-foreground: "#FFFFFF"
+
+  code:
+    background: "#F7F7F7"
+    color: "#000000"
+    border: "1px solid #E0E0E0"
+
+  buttons:
+    radius: "0"
+    text-transform: "uppercase"
+    letter-spacing: "0.1em"
+    font-weight: 600
+
+  cards:
+    border: "2px solid #000000"
+    border-hover: "#E53E3E"
+    padding: "3rem"
+    background: "#FFFFFF"
+    radius: "0"
+
+  lists:
+    marker: "■"
+    marker-color: "#E53E3E"
+
+  blockquotes:
+    border-left: "4px solid #E53E3E"
+    padding-left: "2rem"
+    font-weight: 500
