--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
+brand-yml==0.3.1
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
